[package]
name = "gg"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
chrono = "0.4.38"
rand = "0.8.5"
rand_chacha = "0.3.1"
rusqlite = { version = "0.32.1", features = ["bundled", "chrono", "serde_json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["sync"] }
